Added validation for PlayedMedia